--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -7,5 +7,12 @@
 				"securityType": "API_KEY"
 			}
 		}
+	},
+	"function": {
+		"meetupevents": {
+			"service": "Lambda",
+			"providerPlugin": "awscloudformation",
+			"build": true
+		}
 	}
 }
