--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -9,7 +9,7 @@
 		}
 	},
 	"function": {
-		"meetupevents": {
+		"helloworld": {
 			"service": "Lambda",
 			"providerPlugin": "awscloudformation",
 			"build": true
